When multiple endpoints are available the configuration is now correctly saved as part of a project's post build action.

--- a/src/main/resources/org/jenkinsci/plugins/relution/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/relution/Messages.properties
@@ -4,5 +4,5 @@ Relution.apiEndpointUrlIsInvalid=The provided URL is not valid
 Relution.invalidApplicationUUID=This application UUID seems invalid
 Relution.apiIconIsRequired=Please insert an icon
 Relution.successfulLogin=You are now authenticated to URL:
-Relution.unsucessfullLogin=The Login was not successfull to URL:
+Relution.unsucessfullLogin=The Login was not successful to URL:
 Relution.appName=Please a name for your app
