--- a/src/main/resources/org/jenkinsci/plugins/relution/Messages_de.properties
+++ b/src/main/resources/org/jenkinsci/plugins/relution/Messages_de.properties
@@ -1,4 +1,4 @@
-Relution.displayName=In Relution Enterprise Appstore veröffentlichen
+Relution.displayName=In Relution Enterprise Appstore veröffentlichen (Veraltet)
 Relution.apiEndpointUrlIsRequired=Sie müssen eine URL angeben
 Relution.apiEndpointUrlIsInvalid=Die angegebene URL ist ungültig
 Relution.invalidApplicationUUID=Diese UUID scheint nicht gültig zu sein
